--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/runtime": "^7.20.7",
     "babel-loader": "^9.1.2",
+    "bootstrap": "5.2.3",
     "compression-webpack-plugin": "^10.0.0",
     "history": "^5.3.0",
     "mangopay2-nodejs-sdk": "^1.32.1",
