--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/runtime": "^7.20.7",
+    "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
+    "@popperjs/core": "^2.11.6",
     "babel-loader": "^9.1.2",
-    "bootstrap": "5.2.3",
+    "bootstrap": "^5.2.3",
     "compression-webpack-plugin": "^10.0.0",
     "history": "^5.3.0",
     "mangopay2-nodejs-sdk": "^1.32.1",
@@ -17,7 +20,10 @@
     "redux-form": "^8.3.9",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0",
+    "sortablejs": "^1.15.0",
+    "stimulus_reflex": "3.4.1",
     "terser-webpack-plugin": "^5.3.6",
+    "typed.js": "^2.0.12",
     "webpack": "^5.75.0",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "^5.0.1",
