--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "bootstrap": "^5.2.3",
     "compression-webpack-plugin": "^10.0.0",
     "history": "^5.3.0",
+    "install": "^0.13.0",
     "jquery": "^3.6.3",
     "mangopay2-nodejs-sdk": "^1.32.1",
     "node-forge": "^1.3.1",
+    "npm": "^9.2.0",
     "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -42,7 +44,7 @@
     "typed.js": "^2.0.12",
     "webpack": "^5.75.0",
     "webpack-assets-manifest": "^5.1.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^3",
     "webpack-merge": "^5.8.0",
     "webpack-sources": "^3.2.3"
