--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": "true",
   "dependencies": {
     "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/core": "^7.12.03",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/plugin-proposal-private-methods": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.20.7",
     "@fortawesome/fontawesome-free": "^6.2.1",
@@ -14,7 +17,9 @@
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@popperjs/core": "^2.11.6",
     "@rails/webpacker": "5.4.3",
-    "babel-loader": "^9.1.2",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
@@ -30,7 +35,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
+    "react-rails": "^0.2.5",
+    "react-redux": "^7.0.0",
     "react-router-dom": "^6.6.1",
     "redux": "^4.2.0",
     "redux-form": "^8.3.9",
@@ -38,14 +44,15 @@
     "redux-promise": "^0.6.0",
     "selfsigned": "^2.1.1",
     "sortablejs": "^1.15.0",
+    "stimulus": "1.1",
     "stimulus_reflex": "3.4.1",
     "terser-webpack-plugin": "^5.3.6",
     "three": "^0.148.0",
     "typed.js": "^2.0.12",
-    "webpack": "^5.75.0",
+    "webpack": "^4.44.2",
     "webpack-assets-manifest": "^5.1.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^3",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.8.0",
     "webpack-sources": "^3.2.3"
   },
