--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
+    "@hotwired/turbo-rails": "^7.2.4",
     "@popperjs/core": "^2.11.6",
     "@rails/webpacker": "5.4.3",
     "babel-loader": "^8.2.2",
@@ -49,9 +50,9 @@
     "terser-webpack-plugin": "^5.3.6",
     "three": "^0.148.0",
     "typed.js": "^2.0.12",
-    "webpack": "^4.44.2",
+    "webpack": "^5.75.0",
     "webpack-assets-manifest": "^5.1.0",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.8.0",
     "webpack-sources": "^3.2.3"
